Ajuste Edit-Atend

--- a/views/layouts/form-edit-atend.handlebars
+++ b/views/layouts/form-edit-atend.handlebars
@@ -174,7 +174,7 @@ submit {
             </select>
 
             <label id="entradaL" for="entrada">Data e hora da entrada</label>
-            <input id="entrada" type="datetime-local" name="dataatend" value="{{dataatend}}">
+            <input id="entrada" value="{{dataatend}}" disabled>
 
             <label id="medicosL" for="medicos">Médico atendente</label>
             <select id="medicos" name="medico"required>
